--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ typing_extensions = "^4.7.1"
 urllib3 = "^2.0.5"
 yarl = "^1.9.2"
 
+[tool.poetry.group.new_group]
+optional = true
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
