--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Nikita-St3n <kuznetsov03n@gmail.com>"]
 readme = "README.md"
-packages = [{inslude = "tg_bot"}]
+packages = [{include = "tg_bot"}]
 
 [tool.poetry.depencies]
 python = "^3.10.8"
