--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Nikita-St3n <kuznetsov03n@gmail.com>"]
 readme = "README.md"
 packages = [{include = "tg_bot"}]
 
-[tool.poetry.depencies]
+[tool.poetry.dependencies]
 python = "^3.10.8"
 aiofiles = "^23.1.0"
 aiogram = "^2.23.1"
