--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ Babel = "^2.9.1"
 beautifulsoup4 = "^4.12.2"
 bs4 = "^0.0.1"
 certifi = "^2023.7.22"
-charset-normalizer = "^3.2.0
+charset-normalizer = "^3.2.0"
+frozenlist = "^1.4.0"
 idna = "^3.4"
 lxml = "^4.9.3"
 magic-filter = "^1.0.11"
