--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ beautifulsoup4 = "^4.12.2"
 bs4 = "^0.0.1"
 certifi = "^2023.7.22"
 charset-normalizer = "^3.2.0"
+dotenv = "^0.0.5"
 frozenlist = "^1.4.0"
 idna = "^3.4"
 lxml = "^4.9.3"
